初始化场景

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,12 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
+//    "noUnusedLocals": true,
+//    "noUnusedParameters": true,
+//    "noFallthroughCasesInSwitch": true,
+    "types": [
+      "vite-plugin-glsl/ext"
+    ],
     "paths": {
       "@/*":["./src/*"]
     },
